[gd_scene load_steps=5 format=3 uid="uid://uagdego7pt02"]

[ext_resource type="Script" uid="uid://dvbxj8xftt1ei" path="res://studio/action_engine/graph/inputs/hotkey_action.gd" id="1_0733d"]
[ext_resource type="Script" uid="uid://pejy6s53go63" path="res://studio/action_engine/graph/inputs/hotkey_binding.gd" id="2_wanp4"]
[ext_resource type="PackedScene" uid="uid://d2a67yxp08esv" path="res://studio/ui/modal/modal.tscn" id="3_ggeq4"]
[ext_resource type="PackedScene" uid="uid://hpg52fgw7kdc" path="res://studio/ui/input_recorder/input_rec_popup.tscn" id="4_ti7i4"]

[node name="HotkeyInput" type="GraphNode"]
custom_minimum_size = Vector2(180, 0)
offset_right = 125.0
offset_bottom = 182.0
title = "Hotkey Input"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("1_0733d")

[node name="Input" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "..."

[node name="Pressed" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
text = "Pressed"
horizontal_alignment = 2
vertical_alignment = 1
metadata/slot_type = "trigger"

[node name="ColorRect" type="ColorRect" parent="Pressed"]
modulate = Color(1, 1, 1, 0)
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.847059, 0.823529, 0.729412, 1)

[node name="Released" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
text = "Released"
horizontal_alignment = 2
vertical_alignment = 1
metadata/slot_type = "trigger"

[node name="ColorRect" type="ColorRect" parent="Released"]
modulate = Color(1, 1, 1, 0)
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.847059, 0.823529, 0.729412, 1)

[node name="Handler" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_wanp4")

[node name="Modal" parent="." instance=ExtResource("3_ggeq4")]
unique_name_in_owner = true
visible = false

[node name="InputRecPopup" parent="Modal" instance=ExtResource("4_ti7i4")]
unique_name_in_owner = true
visible = false

[connection signal="pressed" from="Input" to="." method="_on_input_pressed"]
[connection signal="activate" from="Handler" to="." method="_on_handler_activate"]
[connection signal="deactivate" from="Handler" to="." method="_on_handler_deactivate"]
